// Copyright 2020 IBM Corp.
// SPDX-License-Identifier: Apache-2.0

syntax = "proto3";

package connectors;
option java_package = "io.fybrik";
option go_package = "fybrik.io/fybrik/pkg/connectors/protobuf";

message RegisterAssetResponse {
    string asset_id = 1;           // Returns the id of the new asset registered in a catalog
}